kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enterprise-middleware
  labels:
    name: enterprise-middleware
    environment: development
